# YouTubeMind

./: .env.example  .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
chrome-extension/: INSTALLATION.md  README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/icons/: generate_icons.html  generate_icons.py
src/: main.py
src/models/: model.py
src/utils/: get_chunks_text.py  get_vectorstore.py  get_youtube_transcript.py
