[project]
name = "ytsuppoter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "pinecone>=8.0.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]
